--- a/customwidgets/src/main/component/res/layout/activity_main.xml
+++ b/customwidgets/src/main/component/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".debug.MainActivity">
 
     <ImageView
         android:id="@+id/iv_explosion"
