--- a/blurlibrary/src/main/component/res/layout/activity_main.xml
+++ b/blurlibrary/src/main/component/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/ic_launcher"
-    tools:context=".debug.MainActivity">
+    tools:context=".java.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
