--- a/customwidgets/src/main/component/res/layout/activity_main.xml
+++ b/customwidgets/src/main/component/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:scaleType="center"
         android:src="@mipmap/ic_fitness_king"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -38,15 +39,286 @@
     <com.example.customwidgets.exercise.DashBoardView
         android:id="@+id/dbv"
         android:layout_width="300dp"
-        android:layout_height="300dp" />
+        android:layout_height="300dp"
+        android:padding="25dp"
+        android:visibility="gone" />
 
     <com.example.customwidgets.exercise.ClockView
         android:id="@+id/cv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
     <com.example.customwidgets.exercise.PieView
         android:id="@+id/pv"
         android:layout_width="300dp"
-        android:layout_height="300dp" />
+        android:layout_height="300dp"
+        android:padding="25dp"
+        android:visibility="gone" />
+
+    <com.example.customwidgets.exercise.CircleView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:visibility="gone" />
+
+    <com.example.customwidgets.exercise.SportTextView
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:padding="25dp"
+        android:visibility="gone" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimaryDark"
+        android:visibility="gone" />
+
+    <com.example.customwidgets.exercise.ImgTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
+    <com.example.customwidgets.exercise.ZoomView
+        android:id="@+id/zv"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:visibility="gone" />
+
+    <com.example.customwidgets.exercise.TranslateView
+        android:id="@+id/tv"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:visibility="gone" />
+
+    <com.example.customwidgets.exercise.FlipBoardView
+        android:id="@+id/fbv"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:visibility="gone" />
+
+    <com.example.customwidgets.exercise.ProvincesView
+        android:id="@+id/utv"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:visibility="gone" />
+
+    <com.example.customwidgets.exercise.MaterialEditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/app_name"
+        android:textSize="30sp"
+        android:visibility="gone" />
+
+    <com.example.customwidgets.exercise.SquareImageView
+        android:layout_width="400dp"
+        android:layout_height="300dp"
+        android:scaleType="fitXY"
+        android:src="@mipmap/ic_avatar"
+        android:visibility="gone" />
+
+    <com.example.customwidgets.exercise.CircleSizeView
+        android:layout_width="400dp"
+        android:layout_height="300dp"
+        android:visibility="gone" />
+
+    <com.example.customwidgets.exercise.TagLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:horizontalSpacing="8dp"
+        android:verticalSpacing="8dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_orange_dark"
+            android:padding="16dp"
+            android:text="北京市"
+            android:textColor="@android:color/white"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:padding="16dp"
+            android:text="天津市"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:padding="16dp"
+            android:text="上海市"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:padding="16dp"
+            android:text="重庆市"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:padding="16dp"
+            android:text="河北省"
+            android:textColor="@android:color/white"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:padding="16dp"
+            android:text="山西省"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_purple"
+            android:padding="16dp"
+            android:text="辽宁省"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@color/colorPrimary"
+            android:padding="16dp"
+            android:text="吉林省"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:padding="16dp"
+            android:text="黑龙江省"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_purple"
+            android:padding="16dp"
+            android:text="江苏省"
+            android:textColor="@android:color/white"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_green_dark"
+            android:padding="16dp"
+            android:text="浙江省"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/darker_gray"
+            android:padding="16dp"
+            android:text="安徽省"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:padding="16dp"
+            android:text="福建省"
+            android:textColor="@android:color/white"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_orange_dark"
+            android:padding="16dp"
+            android:text="江西省"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_purple"
+            android:padding="16dp"
+            android:text="山东省"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@color/colorPrimary"
+            android:padding="16dp"
+            android:text="河南省"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@color/colorPrimary"
+            android:padding="16dp"
+            android:text="甘肃省"
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_orange_dark"
+            android:padding="16dp"
+            android:text="青海省"
+            android:textColor="@android:color/white"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:padding="16dp"
+            android:text="台湾省"
+            android:textColor="@android:color/white"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_round_rect"
+            android:backgroundTint="@android:color/holo_orange_dark"
+            android:padding="16dp"
+            android:text="澳门特别行政区"
+            android:textColor="@android:color/white" />
+
+    </com.example.customwidgets.exercise.TagLayout>
 </LinearLayout>
